webdevbootcamp/workspace/YelpCamp/v10/readme.md
#YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds


Each Campground has:
* Name
* Image
* 
[
{"name":"Salmon Creek", image:"http://www.image.com"}
{"name":"Salmon Creek", image:"http://www.image.com"}
{"name":"Salmon Creek", image:"http://www.image.com"}
{"name":"Salmon Creek", image:"http://www.image.com"}
]

#Layout and Basic Styling
* Createour header and footer partials
* Add in Bootstrap


#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form


#Databases

##Intro to Databases
* What is a Database?
    * A collection of information/data
    * Has a interface
* SQL(relational) vs. NoSQL(non-relational)


#Intro to MongoDB
* What is MongoDB?
* Why are we using it?
* Let's Install It!

#Add Mongoose
* Install and configure Mongoose
* Setup camoground model
* Use campground model inside of our routes!

#Show Page
* Review the RESTful routes we've seen so far
* Add a description to our campground model
* Show db.collection.drop()
* Add a show route/template


RESTFUL ROUTES
----------------------------------------------------
THERE ARE 7

name      url        verb   desc.
----------------------------------------------------
INDEX    /dogs        GET    Display a list of all dog
NEW      /dogs/new    GET    Displays form to make a new dog
CREATE   /dogs        POST   Add new dog to DB
SHOW     /dogs/:id    GET    Shows info about one dog


INDEX   /campgrounds
NEW     /campgrounds/new
CREATE  /campgrounds
SHOW    /campgrounds/:id



NEW     /campgrounds/:id/comments/new  GET
CREATE  /campgrounds/:id/comments      POST

#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly!


#Add Seeds File
* Add a seeds.js file
* Run the seeds file every time the server starts

#Add the Comment model!
* Make our errors go away!
* Display comments on campground show page



#Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form


#Style Show Page
* Add sidebar to show page
* Display comments nicely

#Finish Styling Show Page
* Add public directory
* Add custom stylesheet


#Add User Model
* Install all packages needed for auth
* Define User model


##Auth Pt. 1 - Add User Model
* Install all packages needed for auth
* Define User model 

##Auth Pt. 2 - Register
* Configure Passport
* Add register routes
* Add register template

##Auth Pt. 3 - Login
* Add login routes
* Add login template

##Auth Pt. 4 - Logout/Navbar
* Add logout route
* Prevent user from adding a comment if not signed in
* Add links to navbar

##Auth Pt. 5 - Show/Hide Links
* Show/hide auth links in navbar 

##Refactor The Routes
* Use Express router to reoragnize all routes



#Users + Comments
* Associate users and comments
* Save author's name to a comment automatically


#Users + Campgrounds
* Prevent an unauthenticated user from creating a campground
* Save username+id to newly created campground


# Editing Campgrounds
* Add Method-Override
* Add Edit Route for Campgrounds
* Add Link to Edit Page
* Add Update Route
* Fix $set problem

#Deleting Campgrounds
* Add Destroy Route
* Add Delete button


#Authorization Part 1: Campgrounds
* User can only edit his/her campgrounds
* User can only delete his/her campgrounds
* Hide/Show edit and delete buttons


#Editing Comments
* Add Edit route for comments
* Add Edit button
* Add Update route



<!--/campgrounds/:id/edit-->
<!--/campgrounds/:id/comments/:comment_id/edit-->

#Deleting Comments
* Add Destroy route
* Add Delete button


Campground Destroy Route : /campgrounds/:id
Comment Destroy Route : /campgrounds/:id/comments/:comment_id

#Authorization Part 2: Comments
* User can only edit his/her comments
* User can only delete his/her comments
* Hide/Show edit and delete buttons
* Refactor Middleware

